i think i fixed the annoying jumping images but cant check i run out of fetches per day on that api

--- a/src/styles/hotels.css
+++ b/src/styles/hotels.css
@@ -92,7 +92,7 @@
 .gallery-container {
     text-align: center;
     padding: 20px;
-    max-width: 600px;
+    width: 600px;
     margin: 2% auto;
     border-radius: 8px;
 }
@@ -105,7 +105,7 @@
 
 .photo {
     width: auto;
-    max-height: 500px;
+    height: 500px;
     border-radius: 8px;
     transition: transform 0.3s ease-in-out;
 }
